--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   database: davelab.net_development
   pool: 5
   username: root
-  password:
+  password: d4v1d37
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -25,7 +25,7 @@ test:
   database: davelab.net_test
   pool: 5
   username: root
-  password:
+  password: d4v1d37
   host: localhost
 
 production:
@@ -35,5 +35,5 @@ production:
   database: davelab.net_production
   pool: 5
   username: root
-  password:
+  password: d4v1d37
   host: localhost
